# lexx

./: Cargo.toml  LICENSE.md  README.md
docs/: index.html  search-index.js
docs/lexx/: enum.DelimToken.html  enum.Fault.html  enum.Token.html  enum.TokenTree.html  fn.dr.html  fn.flatten_token_tree.html  fn.sr.html  fn.tt.html  index.html  sidebar-items.js  struct.Delimited.html  struct.DiagnosticBuilder.html  struct.IOErr.html  struct.Parser.html  struct.SequenceRepetition.html
docs/syntex_errors/: enum.Level.html  enum.RenderSpan.html  fn.expect.html  index.html  struct.CodeSuggestion.html  struct.DiagnosticBuilder.html  struct.ExplicitBug.html  struct.FatalError.html  struct.Handler.html  struct.SubDiagnostic.html  trait.CodeMapper.html
docs/syntex_pos/: constant.COMMAND_LINE_EXPN.html  constant.COMMAND_LINE_SP.html  constant.DUMMY_SP.html  constant.NO_EXPANSION.html  constant.PROC_EXPN.html  enum.SpanLinesError.html  enum.SpanSnippetError.html  fn.mk_sp.html  index.html  static.SPAN_DEBUG.html  struct.BytePos.html  struct.CharPos.html  struct.DistinctSources.html  struct.ExpnId.html  struct.FileLines.html  struct.FileMap.html  struct.FileMapAndBytePos.html  struct.FileMapAndLine.html  struct.LineInfo.html  struct.Loc.html  struct.LocWithOpt.html  struct.MacroBacktrace.html  struct.MalformedCodemapPositions.html  struct.MultiByteChar.html  struct.MultiSpan.html  struct.Span.html  struct.SpanLabel.html  trait.Pos.html  type.FileLinesResult.html  type.FileName.html
docs/syntex_syntax/: index.html  macro.help!.html  macro.panictry!.html  (+15 more)
src/: lib.rs
(+859 files in other folders)
